Support delete operations
Closes #11
